update bg-img path

--- a/css/detail.css
+++ b/css/detail.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css");
 body {
   margin: 0;
@@ -74,6 +75,7 @@ address {
   font-style: normal;
 }
 
+/* 반응형 화면 크기 */
 #header {
   height: 65px;
   border-bottom: 1px solid #eee;
@@ -412,7 +414,7 @@ address {
   z-index: 2;
   width: 24px;
   height: 45px;
-  background-image: url("/images/bg_buyTab1.png");
+  background-image: url("../images/bg_buyTab1.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -423,7 +425,7 @@ address {
   z-index: 2;
   width: 24px;
   height: 45px;
-  background-image: url("/images/bg_buyTab2.png");
+  background-image: url("../images/bg_buyTab2.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
