--- a/css/sub.css
+++ b/css/sub.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard-dynamic-subset.css");
 body {
   margin: 0;
@@ -74,6 +75,7 @@ address {
   font-style: normal;
 }
 
+/* 반응형 화면 크기 */
 #header {
   height: 65px;
   border-bottom: 1px solid #eee;
@@ -260,22 +262,22 @@ address {
 }
 
 .banner.water {
-  background-image: url("/images/sub_wc_bg.jpg");
+  background-image: url("../images/sub_wc_bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 .banner.air {
-  background-image: url("/images/sub_ac_bg.jpg");
+  background-image: url("../images/sub_ac_bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 .banner.body {
-  background-image: url("/images/sub_bc_bg.jpg");
+  background-image: url("../images/sub_bc_bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
 .banner.sleep {
-  background-image: url("/images/sub_sc_bg.jpg");
+  background-image: url("../images/sub_sc_bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
