update body,html hidden class add

--- a/scss/_utils.scss
+++ b/scss/_utils.scss
@@ -31,6 +31,7 @@ a {text-decoration: none; color:#333;}
 input[type=text] {-webkit-appearance: none; -webkit-border-radius: 0;}
 button {all: unset;}
 address {font-style: normal;}
+.hidden {overflow-y: hidden;}
 
 
 /* 반응형 화면 크기 */
