--- a/css/sub.css
+++ b/css/sub.css
@@ -75,6 +75,10 @@ address {
   font-style: normal;
 }
 
+.hidden {
+  overflow-y: hidden;
+}
+
 /* 반응형 화면 크기 */
 #header {
   height: 65px;
@@ -108,6 +112,7 @@ address {
   left: 0;
   transition: left 0.3s ease-out;
   z-index: 5;
+  overflow-y: scroll;
 }
 #header .menu-list .menu-wrap .close {
   position: absolute;
