--- a/scss/_hfLayout.scss
+++ b/scss/_hfLayout.scss
@@ -37,6 +37,7 @@
                 left: 0;
                 transition: left .3s ease-out;
                 z-index: 5;
+                overflow-y: scroll;
             }
 
             .close {
