update swiper z-index

--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,7 @@ section .intro {
 }
 .main-visual .mainSwiper {
   padding-top: 40px;
+  z-index: inherit;
 }
 .main-visual .swiper-slide {
   width: 100% !important;
