--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,6 +30,10 @@ section {
         z-index: inherit;
     }
 
+    .swiper-wrapper {
+        z-index: inherit;
+    }
+
     .swiper-slide {
         width: 100% !important
     }
