--- a/scss/main.scss
+++ b/scss/main.scss
@@ -75,13 +75,13 @@ section {
         }
     }
 
+    .swiper-pagination {
+        z-index: inherit;
+    }
+
     .swiper-pagination-bullet-active {
         background-color: $main;
     }
-
-    // .mainSwiper {
-    //     padding: 0 5%;
-    // }
 }
 
 .best-product {
